tests/e2e/httpRoute/02-minimal.yaml
---
apiVersion: opentelemetry.io/v1beta1
kind: OpenTelemetryCollector
metadata:
  name: otel-httproute-minimal
spec:
  mode: deployment
  httpRoute:
    enabled: true
    gateway: test-gateway
  config:
    receivers:
      otlp:
        protocols:
          http: {}
    exporters:
      debug: {}
    service:
      pipelines:
        traces:
          receivers: [otlp]
          exporters: [debug]
