tests/e2e/httpRoute/01-error.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-httproute-otlp-grpc
  namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-httproute-otlp-http
  namespace: default
