tests/e2e/httpRoute/02-assert.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-httproute-minimal-collector
status:
  readyReplicas: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-httproute-minimal-otlp-http-httproute
  namespace: default
  labels:
    app.kubernetes.io/managed-by: opentelemetry-operator
    app.kubernetes.io/name: otel-httproute-minimal-otlp-http-httproute
  ownerReferences:
  - apiVersion: opentelemetry.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: OpenTelemetryCollector
    name: otel-httproute-minimal
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: test-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /otlp-http
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - group: ""
      kind: Service
      name: otel-httproute-minimal-collector
      port: 4318
      weight: 1
