tests/e2e/httpRoute/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: httproute
spec:
  namespace: default
  steps:
    - name: step-00
      try:
        - apply:
            file: 00-gateway.yaml
        - apply:
            file: 00-install.yaml
        - assert:
            file: 00-assert.yaml
    - name: step-01
      try:
        - patch:
            file: 01-remove-httproute.yaml
        - error:
            file: 01-error.yaml
    - name: step-02
      try:
        - apply:
            file: 02-minimal.yaml
        - assert:
            file: 02-assert.yaml
